feat(condo): DOMA-9723 added translations to errors

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -454,7 +454,10 @@
   "api.organization.replaceOrganizationEmployeeRole.ORGANIZATION_NOT_FOUND": "Organization not found",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_ARE_BEING_PROCESSED": "These roles are already being processed. Please try again a little later",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_MUST_BE_DIFFERENT": "The new and old roles cannot be the same",
-  "api.organization.sendOrganizationEmployeeRequest.EMPLOYEE_INVITATION_ALREADY_SENT": "You have already been invited to this organization",
+  "api.organization.sendOrganizationEmployeeRequest.EMPLOYEE_ALREADY_ACCEPTED": "You have already been invited to this organization",
+  "api.organization.sendOrganizationEmployeeRequest.EMPLOYEE_INVITATION_ALREADY_SENT": "You are already invited to this organization",
+  "api.organization.sendOrganizationEmployeeRequest.REQUEST_NOT_PROCESSED": "A request has not been processed yet. Please wait for a decision on the request from the organization",
+  "api.organization.sendOrganizationEmployeeRequest.REQUEST_TO_ORGANIZATION_LIMIT_REACHED": "The number of requests to the organization has been exceeded",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "No properties are found to export for current organization",
   "api.property.property.SAME_ADDRESS": "Property with the same address already exists in selected organization",
   "api.propertyScope.exportPropertyScopesToExcel.NOTHING_TO_EXPORT": "No property scopes found for export",
@@ -1617,15 +1620,15 @@
   "organization.createOrganizationForm.foundOrganizationsModal.title.singleOrganization": "The organization {name} with this TIN has already been added",
   "organization.createOrganizationForm.invite.description": "Accept the invitation if you are an employee of this organization and want to join.",
   "organization.createOrganizationForm.invite.title": "You have been invited by the organization {organizationName}",
+  "organization.createOrganizationForm.limit.description": "For security reasons, please contact {chatBotLink} to unlock registration.",
   "organization.createOrganizationForm.rejectedRequest.createOtherOrganization": "Create another organization",
   "organization.createOrganizationForm.rejectedRequest.message": "Please contact the organization administrator and try sending the request again.",
   "organization.createOrganizationForm.rejectedRequest.sendAgain": "Send again",
   "organization.createOrganizationForm.rejectedRequest.title": "The organization {organizationName} has rejected your request",
-  "organization.createOrganizationForm.request.alert.description": "If your request is not approved for a long time, please contact your organization or write to {supportChat}.",
+  "organization.createOrganizationForm.request.alert.description": "If your request is not approved for a long time, please contact your organization or write to {chatBotLink}.",
   "organization.createOrganizationForm.request.description": "Once the administrator approves your request, you will receive an SMS confirmation and gain access to the platform.",
   "organization.createOrganizationForm.request.duplicate.title": "A request to {organizationName} has already been sent",
   "organization.createOrganizationForm.request.title": "Request sent to {organizationName}",
-  "organization.createOrganizationForm.searchByTinLimit.description": "For security reasons, please contact {chatBotLink} to unlock registration.",
   "organization.createOrganizationForm.searchByTinLimit.message": "TIN input attempt limit exceeded",
   "organization.createOrganizationForm.supportChat": "support chat",
   "organization.createOrganizationForm.title": "Create an Organization",
