--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -454,7 +454,10 @@
   "api.organization.replaceOrganizationEmployeeRole.ORGANIZATION_NOT_FOUND": "Organización no encontrada",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_ARE_BEING_PROCESSED": "Estos roles ya se están procesando. Por favor, inténtalo de nuevo un poco más tarde",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_MUST_BE_DIFFERENT": "El rol nuevo y el antiguo no pueden ser iguales",
+  "api.organization.sendOrganizationEmployeeRequest.EMPLOYEE_ALREADY_ACCEPTED": "Ya has sido invitado a esta organización",
   "api.organization.sendOrganizationEmployeeRequest.EMPLOYEE_INVITATION_ALREADY_SENT": "Ya eres miembro de esta organización",
+  "api.organization.sendOrganizationEmployeeRequest.REQUEST_NOT_PROCESSED": "Una solicitud aún no procesada. Por favor, espere a que la organización decida sobre la solicitud.",
+  "api.organization.sendOrganizationEmployeeRequest.REQUEST_TO_ORGANIZATION_LIMIT_REACHED": "Se ha superado el número de solicitudes a la organización",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "No hay comunidades para exportación que estén asociadas a esta organización.",
   "api.property.property.SAME_ADDRESS": "Ya existe una propiedad con esta dirección en la organización seleccionada",
   "api.propertyScope.exportPropertyScopesToExcel.NOTHING_TO_EXPORT": "No se han encontrado ámbitos para exportar",
@@ -1617,15 +1620,15 @@
   "organization.createOrganizationForm.foundOrganizationsModal.title.singleOrganization": "La organización {name} con este TIN ya ha sido añadida",
   "organization.createOrganizationForm.invite.description": "Acepte la invitación si es un empleado de esta organización y desea unirse.",
   "organization.createOrganizationForm.invite.title": "Has sido invitado por la organización {organizationName}",
+  "organization.createOrganizationForm.limit.description": "Por razones de seguridad, comuníquese con {chatBotLink} para desbloquear el registro.",
   "organization.createOrganizationForm.rejectedRequest.createOtherOrganization": "Crear otra organización",
   "organization.createOrganizationForm.rejectedRequest.message": "Por favor, póngase en contacto con el administrador de la organización e intente enviar la solicitud de nuevo.",
   "organization.createOrganizationForm.rejectedRequest.sendAgain": "Enviar de nuevo",
   "organization.createOrganizationForm.rejectedRequest.title": "La organización {organizationName} ha rechazado tu solicitud",
-  "organization.createOrganizationForm.request.alert.description": "Si su solicitud no se aprueba durante mucho tiempo, comuníquese con su organización o escriba a {supportChat}.",
+  "organization.createOrganizationForm.request.alert.description": "Si su solicitud no se aprueba durante mucho tiempo, comuníquese con su organización o escriba a {chatBotLink}.",
   "organization.createOrganizationForm.request.description": "Una vez que el administrador apruebe su solicitud, recibirá una confirmación por SMS y obtendrá acceso a la plataforma.",
   "organization.createOrganizationForm.request.duplicate.title": "Ya se ha enviado una solicitud a {organizationName}",
   "organization.createOrganizationForm.request.title": "Solicitud enviada a {organizationName}",
-  "organization.createOrganizationForm.searchByTinLimit.description": "Por razones de seguridad, comuníquese con {chatBotLink} para desbloquear el registro.",
   "organization.createOrganizationForm.searchByTinLimit.message": "Se superó el límite de intentos de ingreso del NIF",
   "organization.createOrganizationForm.supportChat": "chat de soporte",
   "organization.createOrganizationForm.title": "Crear una organización",
