--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -454,7 +454,10 @@
   "api.organization.replaceOrganizationEmployeeRole.ORGANIZATION_NOT_FOUND": "Организация не найдена",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_ARE_BEING_PROCESSED": "Эти роли уже обрабатываются. Пожалуйста, повторите попытку чуть позже",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_MUST_BE_DIFFERENT": "Новая и старая роль не могут совпадать",
-  "api.organization.sendOrganizationEmployeeRequest.EMPLOYEE_INVITATION_ALREADY_SENT": "Вы уже состоите в этой организации",
+  "api.organization.sendOrganizationEmployeeRequest.EMPLOYEE_ALREADY_ACCEPTED": "Вы уже состоите в этой организации",
+  "api.organization.sendOrganizationEmployeeRequest.EMPLOYEE_INVITATION_ALREADY_SENT": "Вы уже приглашены в эту организацию",
+  "api.organization.sendOrganizationEmployeeRequest.REQUEST_NOT_PROCESSED": "Запрос еще не обработан. Пожалуйста, дождитесь решения по запросу от организации",
+  "api.organization.sendOrganizationEmployeeRequest.REQUEST_TO_ORGANIZATION_LIMIT_REACHED": "Превышено количество запросов в организацию",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "Нет домов для экспорта, которые связаны с данной организацией",
   "api.property.property.SAME_ADDRESS": "Дом с таким адресом уже создан в выбранной организации",
   "api.propertyScope.exportPropertyScopesToExcel.NOTHING_TO_EXPORT": "Не найдено областей видимости для экспорта",
@@ -1617,15 +1620,15 @@
   "organization.createOrganizationForm.foundOrganizationsModal.title.singleOrganization": "Организация {name} с таким ИНН уже добавлена",
   "organization.createOrganizationForm.invite.description": "Примите приглашение, если вы сотрудник этой организации и хотите присоединиться",
   "organization.createOrganizationForm.invite.title": "Вас пригласила организация {organizationName}",
+  "organization.createOrganizationForm.limit.description": "В целях безопасности для разблокировки регистрации обратитесь в {chatBotLink}",
   "organization.createOrganizationForm.rejectedRequest.createOtherOrganization": "Создать другую организацию",
   "organization.createOrganizationForm.rejectedRequest.message": "Обратитесь к администратору организации и попробуйте отправить запрос еще раз",
   "organization.createOrganizationForm.rejectedRequest.sendAgain": "Отправить еще раз",
   "organization.createOrganizationForm.rejectedRequest.title": "Организация {organizationName} отклонила ваш запрос",
-  "organization.createOrganizationForm.request.alert.description": "Если запрос долго не подтверджают, обратитесь в вашу организацию или напишите в {supportChat}",
+  "organization.createOrganizationForm.request.alert.description": "Если запрос долго не подтверджают, обратитесь в вашу организацию или напишите в {chatBotLink}",
   "organization.createOrganizationForm.request.description": "Как только администратор одобрит ваш запрос, вам придет СМС-подтверждение и откроется доступ к платформе",
   "organization.createOrganizationForm.request.duplicate.title": "Запрос в {organizationName} уже был отправлен",
   "organization.createOrganizationForm.request.title": "Запрос в {organizationName} отправлен",
-  "organization.createOrganizationForm.searchByTinLimit.description": "В целях безопасности для разблокировки регистрации обратитесь в {chatBotLink}",
   "organization.createOrganizationForm.searchByTinLimit.message": "Превышено количество попыток ввода ИНН",
   "organization.createOrganizationForm.supportChat": "чат поддержки",
   "organization.createOrganizationForm.title": "Создайте организацию",
