feat(condo): DOMA-11316 added lang

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -605,6 +605,7 @@
   "billing.category.trash.name": "Trash",
   "billing.category.trash.name.declined": "trash",
   "billing.category.water_removal.name": "Water removal",
+  "billing.category.insurance.name": "Insurance",
   "callRecord.call": "Call",
   "callRecord.callType.incoming": "Incoming",
   "callRecord.callType.outgoing": "Outgoing",
