feat(dev-portal-web): DOMA-11309 amount distribution calculator (sandbox)

--- a/apps/dev-portal-web/docs/api/cases/invoices/amount-distribution.ru.mdx
+++ b/apps/dev-portal-web/docs/api/cases/invoices/amount-distribution.ru.mdx
@@ -93,3 +93,8 @@ type TDistribution = {
 | recipient2 | 96.66 |
 | recipient3 | 96.67 |
 | комиссия   | 10    |
+
+## Калькулятор
+
+Ниже представлена песочница, позволяющая делать расчеты распределения.
+<AmountDistributionCalculator />
