--- a/apps/dev-portal-web/lang/ru.json
+++ b/apps/dev-portal-web/lang/ru.json
@@ -182,5 +182,21 @@
   "apps.b2c.sections.publishing.publishForm.items.info.label": "Информация о приложении",
   "apps.b2c.sections.publishing.publishForm.items.build.label": "Сборка приложения",
   "apps.b2c.sections.publishing.publishForm.items.build.select.placeholder": "Выберите сборку",
-  "apps.b2c.sections.publishing.publishForm.actions.publish": "Опубликовать"
+  "apps.b2c.sections.publishing.publishForm.actions.publish": "Опубликовать",
+
+  "amountDistributionCalculator.paymentSettings": "Параметры платежа",
+  "amountDistributionCalculator.paymentAmount": "Сумма платежа",
+  "amountDistributionCalculator.paymentFee": "Комиссия с платежа",
+  "amountDistributionCalculator.recipients": "Получатели",
+  "amountDistributionCalculator.tin": "ИНН",
+  "amountDistributionCalculator.amount": "Сумма",
+  "amountDistributionCalculator.order": "Порядок",
+  "amountDistributionCalculator.isFeePayer": "Платит комиссию",
+  "amountDistributionCalculator.vor": "Округление",
+  "amountDistributionCalculator.overpaymentPart": "Часть переплаты",
+  "amountDistributionCalculator.splitOptions": "Дополнительные настройки",
+  "amountDistributionCalculator.decimalPlaces": "Знаков после запятой",
+  "amountDistributionCalculator.amountDistributionFieldValue": "Значение поля amountDistribution",
+  "amountDistributionCalculator.splitResultTitle": "Результат распределения",
+  "amountDistributionCalculator.fee": "Комиссия"
 }
