--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -3117,7 +3117,7 @@
   "ticket.problem.classifier.PLUMBING.name": "Fontanería",
   "ticket.problem.classifier.PLUMBING_LEAK.name": "Fuga de fontanería",
   "ticket.problem.classifier.PORCH.name": "Pórtico",
-  "ticket.problem.classifier.POWER_SHEILD_SPARK.name": "Chispa en armario eléctrico",
+  "ticket.problem.classifier.POWER_SHIELD_SPARK.name": "Chispa en armario eléctrico",
   "ticket.problem.classifier.POWER_SURGES.name": "Subidas de tensión",
   "ticket.problem.classifier.PRIMARY_SEALING.name": "Sellado primario",
   "ticket.problem.classifier.PROJECTS_TECHNICAL_DOCUMENTATION.name": "Proyectos/Especificaciones técnicas",
