feat(dev-portal-web): DOMA-11309 mode component to docs/widgets and change translations keys

--- a/apps/dev-portal-web/lang/en.json
+++ b/apps/dev-portal-web/lang/en.json
@@ -184,19 +184,19 @@
   "apps.b2c.sections.publishing.publishForm.items.build.select.placeholder": "Select build",
   "apps.b2c.sections.publishing.publishForm.actions.publish": "Publish",
 
-  "amountDistributionCalculator.paymentSettings": "Payment settings",
-  "amountDistributionCalculator.paymentAmount": "Payment amount",
-  "amountDistributionCalculator.paymentFee": "Payment fee",
-  "amountDistributionCalculator.recipients": "Recipients",
-  "amountDistributionCalculator.tin": "TIN",
-  "amountDistributionCalculator.amount": "Sum",
-  "amountDistributionCalculator.order": "Order",
-  "amountDistributionCalculator.isFeePayer": "Fee payer",
-  "amountDistributionCalculator.vor": "Rounding",
-  "amountDistributionCalculator.overpaymentPart": "Overpayment part",
-  "amountDistributionCalculator.splitOptions": "Options",
-  "amountDistributionCalculator.decimalPlaces": "Decimal places",
-  "amountDistributionCalculator.amountDistributionFieldValue": "Value for amountDistribution field",
-  "amountDistributionCalculator.splitResultTitle": "Distribution result",
-  "amountDistributionCalculator.fee": "Fee"
+  "docs.widgets.amountDistributionCalculator.paymentSettings": "Payment settings",
+  "docs.widgets.amountDistributionCalculator.paymentAmount": "Payment amount",
+  "docs.widgets.amountDistributionCalculator.paymentFee": "Payment fee",
+  "docs.widgets.amountDistributionCalculator.recipients": "Recipients",
+  "docs.widgets.amountDistributionCalculator.tin": "TIN",
+  "docs.widgets.amountDistributionCalculator.amount": "Sum",
+  "docs.widgets.amountDistributionCalculator.order": "Order",
+  "docs.widgets.amountDistributionCalculator.isFeePayer": "Fee payer",
+  "docs.widgets.amountDistributionCalculator.vor": "Rounding",
+  "docs.widgets.amountDistributionCalculator.overpaymentPart": "Overpayment part",
+  "docs.widgets.amountDistributionCalculator.splitOptions": "Options",
+  "docs.widgets.amountDistributionCalculator.decimalPlaces": "Decimal places",
+  "docs.widgets.amountDistributionCalculator.amountDistributionFieldValue": "Value for amountDistribution field",
+  "docs.widgets.amountDistributionCalculator.splitResultTitle": "Distribution result",
+  "docs.widgets.amountDistributionCalculator.fee": "Fee"
 }
