--- a/apps/dev-portal-web/lang/ru.json
+++ b/apps/dev-portal-web/lang/ru.json
@@ -184,19 +184,19 @@
   "apps.b2c.sections.publishing.publishForm.items.build.select.placeholder": "Выберите сборку",
   "apps.b2c.sections.publishing.publishForm.actions.publish": "Опубликовать",
 
-  "amountDistributionCalculator.paymentSettings": "Параметры платежа",
-  "amountDistributionCalculator.paymentAmount": "Сумма платежа",
-  "amountDistributionCalculator.paymentFee": "Комиссия с платежа",
-  "amountDistributionCalculator.recipients": "Получатели",
-  "amountDistributionCalculator.tin": "ИНН",
-  "amountDistributionCalculator.amount": "Сумма",
-  "amountDistributionCalculator.order": "Порядок",
-  "amountDistributionCalculator.isFeePayer": "Платит комиссию",
-  "amountDistributionCalculator.vor": "Округление",
-  "amountDistributionCalculator.overpaymentPart": "Часть переплаты",
-  "amountDistributionCalculator.splitOptions": "Дополнительные настройки",
-  "amountDistributionCalculator.decimalPlaces": "Знаков после запятой",
-  "amountDistributionCalculator.amountDistributionFieldValue": "Значение поля amountDistribution",
-  "amountDistributionCalculator.splitResultTitle": "Результат распределения",
-  "amountDistributionCalculator.fee": "Комиссия"
+  "docs.widgets.amountDistributionCalculator.paymentSettings": "Параметры платежа",
+  "docs.widgets.amountDistributionCalculator.paymentAmount": "Сумма платежа",
+  "docs.widgets.amountDistributionCalculator.paymentFee": "Комиссия с платежа",
+  "docs.widgets.amountDistributionCalculator.recipients": "Получатели",
+  "docs.widgets.amountDistributionCalculator.tin": "ИНН",
+  "docs.widgets.amountDistributionCalculator.amount": "Сумма",
+  "docs.widgets.amountDistributionCalculator.order": "Порядок",
+  "docs.widgets.amountDistributionCalculator.isFeePayer": "Платит комиссию",
+  "docs.widgets.amountDistributionCalculator.vor": "Округление",
+  "docs.widgets.amountDistributionCalculator.overpaymentPart": "Часть переплаты",
+  "docs.widgets.amountDistributionCalculator.splitOptions": "Дополнительные настройки",
+  "docs.widgets.amountDistributionCalculator.decimalPlaces": "Знаков после запятой",
+  "docs.widgets.amountDistributionCalculator.amountDistributionFieldValue": "Значение поля amountDistribution",
+  "docs.widgets.amountDistributionCalculator.splitResultTitle": "Результат распределения",
+  "docs.widgets.amountDistributionCalculator.fee": "Комиссия"
 }
