feat(condo): DOMA-11321 front changes in UI

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2646,6 +2646,9 @@
   "pages.condo.ticket.filters.Attribute": "Attribute",
   "pages.condo.ticket.filters.Author": "Author",
   "pages.condo.ticket.filters.ClientPhone": "Client phone",
+  "pages.condo.ticket.filters.HasComments": "Has comments",
+  "pages.condo.ticket.filters.OnlyUnansweredComments": "Only unanswered",
+  "pages.condo.ticket.filters.OnlyUnansweredCommentsTooltipHelp": "Those comments from a resident will be shown after which there are no comments from colleagues",
   "pages.condo.ticket.filters.CompletedAt": "Completed at",
   "pages.condo.ticket.filters.EnterFullName": "Enter full name",
   "pages.condo.ticket.filters.EnterOrganization": "Enter full name",
@@ -2662,6 +2665,8 @@
   "pages.condo.ticket.filters.isResidentContact": "Resident/Not resident",
   "pages.condo.ticket.filters.isResidentContact.false": "not resident",
   "pages.condo.ticket.filters.isResidentContact.true": "resident",
+  "pages.condo.ticket.filters.residentComment": "From resident",
+  "pages.condo.ticket.filters.organizationComment": "From colleagues",
   "pages.condo.ticket.filters.lastCommentAt": "Last comment date",
   "pages.condo.ticket.generateDocument.completionWorks.label": "Work completion certificate",
   "pages.condo.ticket.generateDocument.label": "Generate document",
