--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2646,6 +2646,9 @@
   "pages.condo.ticket.filters.Attribute": "Признак",
   "pages.condo.ticket.filters.Author": "Автор",
   "pages.condo.ticket.filters.ClientPhone": "Телефон заявителя",
+  "pages.condo.ticket.filters.HasComments": "Наличие комментариев",
+  "pages.condo.ticket.filters.OnlyUnansweredComments": "Только неотвеченные",
+  "pages.condo.ticket.filters.OnlyUnansweredCommentsTooltipHelp": "Будут показаны те комментарии от жителя, после которых нет комментариев от коллег",
   "pages.condo.ticket.filters.CompletedAt": "Дата выполнения",
   "pages.condo.ticket.filters.EnterFullName": "Введите ФИО",
   "pages.condo.ticket.filters.EnterOrganization": "Введите организацию",
@@ -2662,6 +2665,8 @@
   "pages.condo.ticket.filters.isResidentContact": "Житель/не житель",
   "pages.condo.ticket.filters.isResidentContact.false": "Не житель",
   "pages.condo.ticket.filters.isResidentContact.true": "Житель",
+  "pages.condo.ticket.filters.residentComment": "От жителя",
+  "pages.condo.ticket.filters.organizationComment": "От коллег",
   "pages.condo.ticket.filters.lastCommentAt": "Дата последнего комментария",
   "pages.condo.ticket.generateDocument.completionWorks.label": "Акт выполненных работ",
   "pages.condo.ticket.generateDocument.label": "Сформировать акт",
