--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2646,6 +2646,9 @@
   "pages.condo.ticket.filters.Attribute": "Atributo",
   "pages.condo.ticket.filters.Author": "Autor",
   "pages.condo.ticket.filters.ClientPhone": "Teléfono del solicitante",
+  "pages.condo.ticket.filters.HasComments": "Disponibilidad de comentarios",
+  "pages.condo.ticket.filters.OnlyUnansweredComments": "Solo sin respuesta",
+  "pages.condo.ticket.filters.OnlyUnansweredCommentsTooltipHelp": "Se mostrarán aquellos comentarios de un residente después de los cuales no hay comentarios de los compañeros.",
   "pages.condo.ticket.filters.CompletedAt": "Fecha de ejecución",
   "pages.condo.ticket.filters.EnterFullName": "Introduzca nombre completo",
   "pages.condo.ticket.filters.EnterOrganization": "Introduzca nombre de la organización",
@@ -2662,6 +2665,8 @@
   "pages.condo.ticket.filters.isResidentContact": "Vecino/No vecino",
   "pages.condo.ticket.filters.isResidentContact.false": "Vecino",
   "pages.condo.ticket.filters.isResidentContact.true": "Vecino",
+  "pages.condo.ticket.filters.residentComment": "De un residente",
+  "pages.condo.ticket.filters.organizationComment": "De colegas",
   "pages.condo.ticket.filters.lastCommentAt": "Fecha del último comentario",
   "pages.condo.ticket.generateDocument.completionWorks.label": "Certificado de finalización de obra",
   "pages.condo.ticket.generateDocument.label": "Generar documento",
